# viper

./: Cargo.toml
benches/: aggregator.rs  aggregator_open.rs  client.rs  client_c.rs  client_v.rs  utils.rs
src/: lib.rs  main.rs
src/primitives/: commitment.rs  ec.rs  mkhs.rs  mod.rs  phollard_rho.rs
src/system/: aggregator.rs  client.rs  mod.rs  setup.rs
src/util/: dataset.rs
