[package]
name = "viper"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.2", features = ["rayon"] }
ark-ec = "0.4.2"
ark-std = "0.4.0"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-bls12-381 = "0.4.0"

ed25519-dalek = { version = "2.1.1" , features = ["rand_core"]}

rand = "0.8.5"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bigdecimal = "0.4.5"

rayon = "1.10.0"
lazy_static = "1.5.0"
anyhow = "1.0.89"
sha2 = "0.10.8"

criterion = { version = "0.5.1", features = ["html_reports", "plotters"] }

[[bench]]
name = "client_c"
harness = false
[[bench]]
name = "client_v"
harness = false
[[bench]]
name = "aggregator"
harness = false
[[bench]]
name = "aggregator_open"
harness = false